k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deivi-motors-k8s
  labels:
    app: deivi-motors-k8s
