k8s/deivi-motors-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deivi-motors
  namespace: deivi-motors-k8s
  labels:
    app: deivi-motors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deivi-motors
  template:
    metadata:
      labels:
        app: deivi-motors
        component: deivi-motors
    spec:
      serviceAccountName: deivi-motors-sa # Essencial
      containers:
        - name: deivi-motors
          image: 404234478011.dkr.ecr.us-east-1.amazonaws.com/deivi-motors-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          # BLOQUEIA readiness/liveness até o app subir
          startupProbe:
            httpGet:
              path: /deivi_motors/actuator/health
              port: 8080
            failureThreshold: 30 # 30 tentativas
            periodSeconds: 10 # a cada 10s → até 5 minutos
          #READINESS (receber tráfego)
          readinessProbe:
            httpGet:
              path: /deivi_motors/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          # LIVENESS (reinicia só se TRAVAR)
          livenessProbe:
            httpGet:
              path: /deivi_motors/actuator/health
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 3
      restartPolicy: Always
